force-app/main/default/objects/XactlyExpress__XCPlanDocumentSettings__c/XactlyExpress__XCPlanDocumentSettings__c.object-meta.xml
<CustomObject>
    <description>This object holds information about various plan document settings</description>
    <label>XCPlanDocumentSetting</label>
    <nameField>
        <label>XCPlanDocumentSetting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>XCPlanDocumentSettings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>