force-app/main/default/objects/XactlyExpress__XCPlanDocumentSettings__c/fields/XactlyExpress__DoctTitle__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__DoctTitle__c</fullName>
    <description>Plan document title to be displayed</description>
    <inlineHelpText>Plan Document title</inlineHelpText>
    <label>DoctTitle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>