force-app/main/default/objects/XactlyExpress__XCPlanDocumentSettings__c/fields/XactlyExpress__DoctTitleType__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__DoctTitleType__c</fullName>
    <label>DoctTitleType</label>
    <length>80</length>
    <type>Text</type>
</CustomField>