force-app/main/default/objects/XactlyExpress__XCPlanDocumentSettings__c/fields/XactlyExpress__EffectiveDateType__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__EffectiveDateType__c</fullName>
    <label>EffectiveDateType</label>
    <length>80</length>
    <type>Text</type>
</CustomField>