force-app/main/default/objects/XactlyExpress__XCPlanDocumentSettings__c/fields/XactlyExpress__EffectiveStartDate__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__EffectiveStartDate__c</fullName>
    <description>Plan document effective date</description>
    <inlineHelpText>Plan document effective date</inlineHelpText>
    <label>EffectiveStartDate</label>
    <type>Date</type>
</CustomField>