force-app/main/default/objects/XactlyExpress__XCPlanDocumentSettings__c/fields/XactlyExpress__PersonName__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__PersonName__c</fullName>
    <description>Order at which person name should be displayed</description>
    <inlineHelpText>Order of person name</inlineHelpText>
    <label>PersonName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>