force-app/main/default/objects/XactlyExpress__XCPlanDocumentSettings__c/fields/XactlyExpress__PersonTitle__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__PersonTitle__c</fullName>
    <description>Person title to be displayed in the plan document</description>
    <inlineHelpText>Person title to be displayed</inlineHelpText>
    <label>PersonTitle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>