force-app/main/default/objects/XactlyExpress__XCPlanDocumentSettings__c/fields/XactlyExpress__PlanId__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__PlanId__c</fullName>
    <description>associated plan id for this plan doc setting</description>
    <label>XCPlan</label>
    <referenceTo>XactlyExpress__XCPlan__c</referenceTo>
    <relationshipLabel>XCPlanDocumentSettings</relationshipLabel>
    <relationshipName>XCPlanDocumentSettings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>