force-app/main/default/objects/XactlyExpress__XCPlanDocumentSettings__c/fields/XactlyExpress__PlanTitleType__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__PlanTitleType__c</fullName>
    <label>PlanTitleType</label>
    <length>80</length>
    <type>Text</type>
</CustomField>